# HomeCenterUI

./: .gitignore  CMakeLists.txt  ClockTile.qml  ImageButton.qml  LogModel.qml  LogTile.qml  Main.qml  README.md  SideBar.qml  StocksTile.qml  WeatherBmeTile.qml  WeatherCurrentTile.qml  logelement.cpp  logelement.h  main.cpp  miscinfo.cpp  miscinfo.h  stocksapp.cpp  stocksapp.h  systemlog.cpp  systemlog.h  weatherapp.cpp  weatherapp.h
